--- a/kashyap/styledisplay.css
+++ b/kashyap/styledisplay.css
@@ -8,13 +8,7 @@
     padding: 34px;
     margin: 23px;
     margin: auto;
-}
-.bg{
-    width: 100%;
-    position: absolute;
-    z-index: -1;
-    opacity: 0.8;
-} 
+} */
 input ,textarea{
     border: 2px solid black;
     border-radius: 6px;
@@ -25,3 +19,9 @@ input ,textarea{
     padding: 7px;
     display: block;
 }
+.bg{
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+    opacity: 0.5;
+} 
